[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/PatrolArea.gd" type="Script" id=1]
[ext_resource path="res://Textures/flag.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 634.003

[sub_resource type="CircleShape2D" id=2]
radius = 28.0

[node name="PatrolArea" type="Position2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 3, -15 )
texture = ExtResource( 2 )

[node name="Range" type="Area2D" parent="."]
input_pickable = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
shape = SubResource( 1 )

[node name="PickableArea" type="Area2D" parent="."]
position = Vector2( 0, -14 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickableArea"]
position = Vector2( -1, 0 )
shape = SubResource( 2 )

[connection signal="body_entered" from="Range" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Range" to="." method="_on_Area2D_body_exited"]
[connection signal="input_event" from="PickableArea" to="." method="_on_PickableArea_input_event"]
